--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 
 	.cell {
 		box-sizing: border-box;
-
 		display: block;
 		display: flex;
 		align-items: center;
-		
 		height: 50%;
 		width: 50%;
 		float: left;
@@ -20,7 +18,7 @@
 		text-shadow: 0 0.025em 0 rgba(0,0,0,0.1);
 		letter-spacing: -0.05em;
 		word-break: break-word;
-		font-size: 60px;
+		font-size: 65px;
 		padding: 0.5em;
 
 		transition: all .4s linear;
@@ -31,72 +29,43 @@
 		text-shadow: 0 0.025em 0 rgba(0,0,0,0.8);
 	}
 
+	@media (max-width: 1400px) {
+		.cell { font-size: 65px; }
+	}
+
+	@media (max-width: 1200px) {
+		.cell { font-size: 60px; }
+	}
+
+	@media (max-width: 1000px) {
+		.cell { font-size: 55px; }
+	}
+
+	@media (max-width: 800px) {
+		.cell { font-size: 45px; }
+	}
+
+	@media (max-width: 600px) {
+		.cell { font-size: 35px; }
+	}
+
+	@media (max-width: 400px) {
+		.cell { font-size: 25px; }
+	}
+
 	</style>
 </head>
 <body>
 
 	<div class="container">
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
+		<div class="cell"><span></span></div>
+		<div class="cell"><span></span></div>
+		<div class="cell"><span></span></div>
+		<div class="cell"><span></span></div>
 	</div>
-
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-	<script>
-
-	var colors = [
-		"rgb(219, 68, 55)",
-		"rgb(15, 157, 88)",
-		"rgb(66, 133, 244)",
-		"rgb(244, 180, 0)"
-	];
-
-	var headlines = [];
-	getHeadlines(function(d) {
-		// console.log(d);
-
-		for( i in d.responseData.feed.entries )
-		{
-			var e = d.responseData.feed.entries[i];
-			headlines.push(e);
-			console.log( e.title );
-		}
-
-		plotHeadlines();
-	});
-
-	var current = 0;
-	function plotHeadlines()
-	{
-		var numContainers = $(".container > .cell").length;
-		for( var i = 0; i < numContainers; i++ )
-		{
-			var $targetContainer = $(".container > .cell:eq("+i+")");
-			$targetContainer.on('click', function() { document.location.href = headlines[i].link; });
-			$targetContainer.css('background-color', colors[ getRandomInt(0, colors.length-1) ]);
-			$targetContainer.text( headlines[i].title );
-		}
-	}
-
-	function getHeadlines(callback) 
-	{
-
-		$.ajax({
-			url: "http://ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=10&q=http://tweakers.mobi/rss/nieuws",			
-			crossDomain: true,
-			dataType: 'jsonp',
-			success: callback
-		});
-
-	}
-
-
-	function getRandomInt(min, max) {
-	    return Math.floor(Math.random() * (max - min + 1)) + min;
-	}
-	</script>
+	<script src="screensaver.js" type="text/javascript"></script>
 </body>
 </html>
