--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		letter-spacing: -0.05em;
 		word-break: break-word;
 		font-size: 65px;
-		padding: 0.5em;
+		padding: 0.5em 1em;
 
 		transition: all .4s linear;
 	}
