Font-sizes related to viewport width

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		text-shadow: 0 0.025em 0 rgba(0,0,0,0.1);
 		letter-spacing: -0.05em;
 		word-break: break-word;
-		font-size: 65px;
+		font-size: 4vw;
 		padding: 0.5em 1em;
 
 		transition: all .4s linear;
@@ -29,28 +29,16 @@
 		text-shadow: 0 0.025em 0 rgba(0,0,0,0.8);
 	}
 
-	@media (max-width: 1400px) {
-		.cell { font-size: 65px; }
-	}
-
 	@media (max-width: 1200px) {
-		.cell { font-size: 60px; }
-	}
-
-	@media (max-width: 1000px) {
-		.cell { font-size: 55px; }
+		.cell { font-size: 4vw; }
 	}
 
 	@media (max-width: 800px) {
-		.cell { font-size: 45px; }
-	}
-
-	@media (max-width: 600px) {
-		.cell { font-size: 35px; }
+		.cell { font-size: 5vw; }
 	}
 
 	@media (max-width: 400px) {
-		.cell { font-size: 25px; }
+		.cell { font-size: 6vw; }
 	}
 
 	</style>
